--- a/html/blog.html
+++ b/html/blog.html
@@ -1271,7 +1271,7 @@
                                             href="../blog/6/index.html"
                                             title="Attractive Setup For You Photos"
                                             >Everything you need to know about
-                                            NoSQL databases
+                                            NoSQL databases.
                                           </a>
                                         </h5>
                                       </header>
