fix styling in blog

--- a/html/blog.html
+++ b/html/blog.html
@@ -1256,7 +1256,7 @@
                                         <img
                                           width="300"
                                           height="200"
-                                          src="../jpg/asfasfafs.jpg"
+                                          src="../jpg/afafafsa.png"
                                           class="attachment-medium size-medium"
                                           alt=""
                                           loading="lazy"
@@ -1270,8 +1270,7 @@
                                             class="eael-grid-post-link"
                                             href="../blog/6/index.html"
                                             title="Attractive Setup For You Photos"
-                                            >Everything you need to know about
-                                            NoSQL databases.
+                                            >Everything you need to know ...
                                           </a>
                                         </h5>
                                       </header>
