fix portfolio section

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1100,7 +1100,7 @@
                               </div>
                             </div>
                           </div>
-                          <div
+                          <!-- <div
                             class="
                               elementor-column
                               elementor-col-33
@@ -1140,7 +1140,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div
                             class="
                               elementor-column
@@ -1173,7 +1173,7 @@
                                   <img
                                     width="800"
                                     height="534"
-                                    src="../jpg/1983-566.png"
+                                    src="../jpg/b2b-1.png"
                                     class="attachment-large size-large"
                                     alt=""
                                     loading="lazy"
@@ -1277,14 +1277,14 @@
                               >
                                 <div class="elementor-widget-container">
                                   <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit.
+                                    Full-stack with MERN Stack, SSR Using
+                                    Next.js
                                   </p>
                                 </div>
                               </div>
                             </div>
                           </div>
-                          <div
+                          <!-- <div
                             class="
                               elementor-column
                               elementor-col-33
@@ -1333,7 +1333,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div
                             class="
                               elementor-column
@@ -1370,15 +1370,6 @@
                                     class="attachment-large size-large"
                                     alt=""
                                     loading="lazy"
-                                    srcset="
-                                      ../jpg/songs-1.png 1024w,
-                                      ../jpg/songs-1.png  300w,
-                                      ../jpg/songs-1.png  768w,
-                                      ../jpg/songs-1.png  800w,
-                                      ../jpg/songs-1.png  600w,
-                                      ../jpg/songs-1.png 1200w
-                                    "
-                                    sizes="(max-width: 800px) 100vw, 800px"
                                   />
                                 </div>
                               </div>
@@ -1461,7 +1452,9 @@
                                       elementor-size-default
                                     "
                                   >
-                                    Full-stack
+                                    <a href="https://www.tourneymaster.org">
+                                      Click Here
+                                    </a>
                                   </h6>
                                 </div>
                               </div>
@@ -1495,7 +1488,7 @@
                               </div>
                             </div>
                           </div>
-                          <div
+                          <!-- <div
                             class="
                               elementor-column
                               elementor-col-33
@@ -1535,7 +1528,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div
                             class="
                               elementor-column
