update for header and others

--- a/html/projects.html
+++ b/html/projects.html
@@ -586,7 +586,7 @@
                                 >
                               </li>
                               <li
-                                id="menu-item-156"
+                                id="menu-item-158"
                                 class="
                                   menu-item
                                   menu-item-type-custom
@@ -598,6 +598,48 @@
                               >
                                 <a href="about.html" class="hfe-menu-item"
                                   >About</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-157"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="projects.html" class="hfe-menu-item"
+                                  >Projects</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-159"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="contact.html" class="hfe-menu-item"
+                                  >Contact</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-156"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="blog.html" class="hfe-menu-item"
+                                  >Blog</a
                                 >
                               </li>
                             </ul>
@@ -675,10 +717,8 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="portfolio.html"
-                                        class="hfe-menu-item"
-                                        >Projects</a
+                                      <a href="index.html" class="hfe-menu-item"
+                                        >HOME</a
                                       >
                                     </li>
                                     <li
@@ -691,10 +731,8 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="single-portfolio.html"
-                                        class="hfe-menu-item"
-                                        >Single-Portfolio</a
+                                      <a href="about.html" class="hfe-menu-item"
+                                        >ABOUT</a
                                       >
                                     </li>
                                     <li
@@ -708,9 +746,9 @@
                                       "
                                     >
                                       <a
-                                        href="contact.html"
+                                        href="projects.html"
                                         class="hfe-menu-item"
-                                        >Contact</a
+                                        >PROJECTS</a
                                       >
                                     </li>
 
@@ -724,8 +762,10 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a href="blog.html" class="hfe-menu-item"
-                                        >Blog</a
+                                      <a
+                                        href="contact.html"
+                                        class="hfe-menu-item"
+                                        >CONTACT</a
                                       >
                                     </li>
                                     <li
@@ -738,13 +778,11 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="single-blog.html"
-                                        class="hfe-menu-item"
-                                        >Single Blog</a
+                                      <a href="blog.html" class="hfe-menu-item"
+                                        >BLOG</a
                                       >
                                     </li>
-                                    <li
+                                    <!-- <li
                                       id="menu-item-469"
                                       class="
                                         menu-item
@@ -757,7 +795,7 @@
                                       <a href="404.html" class="hfe-menu-item"
                                         >404</a
                                       >
-                                    </li>
+                                    </li> -->
                                   </ul>
                                 </nav>
                                 <div
@@ -1751,7 +1789,7 @@
                                       elementor-size-default
                                     "
                                   >
-                                    Dexter Brawn
+                                    Adam Houston
                                   </h5>
                                 </div>
                               </div>
@@ -1773,7 +1811,7 @@
                                       elementor-size-default
                                     "
                                   >
-                                    Model
+                                    Bridge Creative
                                   </h6>
                                 </div>
                               </div>
@@ -1790,9 +1828,14 @@
                               >
                                 <div class="elementor-widget-container">
                                   <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Ut elit tellus, luctus nec
-                                    ullamcorper mattis, pulvinar dapibus leo.
+                                    Working with Dejan was better than expected
+                                    and we had really high expectations. He is
+                                    an incredibly talented developer but what
+                                    really makes him stand out is his work ethic
+                                    and steady approach. Time after time, and
+                                    without us asking, he added enhancements and
+                                    improvements that resulted in a better end
+                                    product for us and our clients.
                                   </p>
                                 </div>
                               </div>
@@ -1854,7 +1897,7 @@
                                       elementor-size-default
                                     "
                                   >
-                                    James Anderson
+                                    Renaldo Webb
                                   </h5>
                                 </div>
                               </div>
@@ -1876,7 +1919,7 @@
                                       elementor-size-default
                                     "
                                   >
-                                    Influencer
+                                    Pet Plate
                                   </h6>
                                 </div>
                               </div>
@@ -1891,11 +1934,20 @@
                                 data-element_type="widget"
                                 data-widget_type="text-editor.default"
                               >
-                                <div class="elementor-widget-container">
+                                <div
+                                  class="elementor-widget-container"
+                                  style="text-align: left"
+                                >
                                   <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Ut elit tellus, luctus nec
-                                    ullamcorper mattis, pulvinar dapibus leo.
+                                    Not only was Dejan’s work on-time and to
+                                    spec, he pays attention to improve the
+                                    aesthetics of the site as well as the
+                                    functionality. Throughout the entire process
+                                    he is responsive, and willing to work
+                                    through issues as they arise. It’s obvious
+                                    he takes tremendous pride in his work, and I
+                                    wouldn’t hesitate to recommend or work with
+                                    him again.
                                   </p>
                                 </div>
                               </div>
@@ -2056,7 +2108,7 @@
                                       elementor-size-default
                                     "
                                   >
-                                    Linda Mash
+                                    Kalwinder Dohil
                                   </h5>
                                 </div>
                               </div>
@@ -2078,7 +2130,7 @@
                                       elementor-size-default
                                     "
                                   >
-                                    Fashion Designer
+                                    TIGI International
                                   </h6>
                                 </div>
                               </div>
@@ -2095,9 +2147,10 @@
                               >
                                 <div class="elementor-widget-container">
                                   <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Ut elit tellus, luctus nec
-                                    ullamcorper mattis, pulvinar dapibus leo.
+                                    Dejan has done a fantastic job overall. Not
+                                    only the site is to design, the code is very
+                                    clean and slick. Love the way he achieved
+                                    the translations portion of the site.
                                   </p>
                                 </div>
                               </div>
