--- a/html/index.html
+++ b/html/index.html
@@ -431,7 +431,7 @@
     "
   >
     <div id="page" class="hfeed site">
-		<header
+      <header
         id="masthead"
         itemscope="itemscope"
         itemtype="https://schema.org/WPHeader"
@@ -573,7 +573,7 @@
                                 >
                               </li>
                               <li
-                                id="menu-item-156"
+                                id="menu-item-158"
                                 class="
                                   menu-item
                                   menu-item-type-custom
@@ -585,6 +585,48 @@
                               >
                                 <a href="about.html" class="hfe-menu-item"
                                   >About</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-157"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="projects.html" class="hfe-menu-item"
+                                  >Projects</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-159"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="contact.html" class="hfe-menu-item"
+                                  >Contact</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-156"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="blog.html" class="hfe-menu-item"
+                                  >Blog</a
                                 >
                               </li>
                             </ul>
@@ -662,10 +704,8 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="portfolio.html"
-                                        class="hfe-menu-item"
-                                        >Portfolio</a
+                                      <a href="index.html" class="hfe-menu-item"
+                                        >HOME</a
                                       >
                                     </li>
                                     <li
@@ -678,10 +718,8 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="single-portfolio.html"
-                                        class="hfe-menu-item"
-                                        >Single-Portfolio</a
+                                      <a href="about.html" class="hfe-menu-item"
+                                        >ABOUT</a
                                       >
                                     </li>
                                     <li
@@ -695,13 +733,12 @@
                                       "
                                     >
                                       <a
-                                        href="contact.html"
+                                        href="projects.html"
                                         class="hfe-menu-item"
-                                        >Contact</a
+                                        >PROJECTS</a
                                       >
                                     </li>
-                                    
-                                    
+
                                     <li
                                       id="menu-item-467"
                                       class="
@@ -712,8 +749,10 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a href="blog.html" class="hfe-menu-item"
-                                        >Blog</a
+                                      <a
+                                        href="contact.html"
+                                        class="hfe-menu-item"
+                                        >CONTACT</a
                                       >
                                     </li>
                                     <li
@@ -726,13 +765,11 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="single-blog.html"
-                                        class="hfe-menu-item"
-                                        >Single Blog</a
+                                      <a href="blog.html" class="hfe-menu-item"
+                                        >BLOG</a
                                       >
                                     </li>
-                                    <li
+                                    <!-- <li
                                       id="menu-item-469"
                                       class="
                                         menu-item
@@ -745,7 +782,7 @@
                                       <a href="404.html" class="hfe-menu-item"
                                         >404</a
                                       >
-                                    </li>
+                                    </li> -->
                                   </ul>
                                 </nav>
                                 <div
@@ -920,7 +957,7 @@
                               <div class="ekit-wid-con">
                                 <div class="video-content">
                                   <a
-                                    href="https://www.youtube.com/watch?v=1MTkZPys7mU?autoplay=yes&amp;playlist=1MTkZPys7mU&amp;loop=no&amp;controls=0&amp;mute=no&amp;start=0&amp;end=&amp;version=3"
+                                    href="/html/portfolio.html"
                                     class="
                                       ekit-video-popup
                                       ekit-video-popup-btn
@@ -982,7 +1019,7 @@
                   </section>
                 </div>
               </div>
-              <div
+              <!-- <div
                 class="
                   elementor-column
                   elementor-col-50
@@ -1025,7 +1062,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </section>
           <section
