--- a/html/single-blog.html
+++ b/html/single-blog.html
@@ -586,7 +586,7 @@
                                 >
                               </li>
                               <li
-                                id="menu-item-156"
+                                id="menu-item-158"
                                 class="
                                   menu-item
                                   menu-item-type-custom
@@ -598,6 +598,48 @@
                               >
                                 <a href="about.html" class="hfe-menu-item"
                                   >About</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-157"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="projects.html" class="hfe-menu-item"
+                                  >Projects</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-159"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="contact.html" class="hfe-menu-item"
+                                  >Contact</a
+                                >
+                              </li>
+                              <li
+                                id="menu-item-156"
+                                class="
+                                  menu-item
+                                  menu-item-type-custom
+                                  menu-item-object-custom
+                                  parent
+                                  hfe-creative-menu
+                                "
+                              >
+                                <a href="blog.html" class="hfe-menu-item"
+                                  >Blog</a
                                 >
                               </li>
                             </ul>
@@ -675,10 +717,8 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="portfolio.html"
-                                        class="hfe-menu-item"
-                                        >Portfolio</a
+                                      <a href="index.html" class="hfe-menu-item"
+                                        >HOME</a
                                       >
                                     </li>
                                     <li
@@ -691,10 +731,8 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="single-portfolio.html"
-                                        class="hfe-menu-item"
-                                        >Single-Portfolio</a
+                                      <a href="about.html" class="hfe-menu-item"
+                                        >ABOUT</a
                                       >
                                     </li>
                                     <li
@@ -708,9 +746,9 @@
                                       "
                                     >
                                       <a
-                                        href="contact.html"
+                                        href="projects.html"
                                         class="hfe-menu-item"
-                                        >Contact</a
+                                        >PROJECTS</a
                                       >
                                     </li>
 
@@ -724,8 +762,10 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a href="blog.html" class="hfe-menu-item"
-                                        >Blog</a
+                                      <a
+                                        href="contact.html"
+                                        class="hfe-menu-item"
+                                        >CONTACT</a
                                       >
                                     </li>
                                     <li
@@ -738,13 +778,11 @@
                                         hfe-creative-menu
                                       "
                                     >
-                                      <a
-                                        href="single-blog.html"
-                                        class="hfe-menu-item"
-                                        >Single Blog</a
+                                      <a href="blog.html" class="hfe-menu-item"
+                                        >BLOG</a
                                       >
                                     </li>
-                                    <li
+                                    <!-- <li
                                       id="menu-item-469"
                                       class="
                                         menu-item
@@ -757,7 +795,7 @@
                                       <a href="404.html" class="hfe-menu-item"
                                         >404</a
                                       >
-                                    </li>
+                                    </li> -->
                                   </ul>
                                 </nav>
                                 <div
